@@ -1,4 +1,4 @@
-Copyright (c) 2015, Spot Media Solutions Sdn. Bhd. <daniel@atomx.com>
+Copyright (c) 2015-2016, Spot Media Solutions Sdn. Bhd. <daniel@atomx.com>
 
 Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
