@@ -16,6 +16,7 @@
   of a :class:`atomx.models.ScheduledReport`
 - :meth:`atomx.Atomx.get` also accepts a model class or instance as resource argument.
   E.g.: ``atomx_api.get(atomx.models.Advertiser)`` or ``atomx_api.get(atomx.models.Advertiser(42))``
+- Add :mod:`pickle` support for :mod:`atomx.models`.
 
 
 1.4
